respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>CUENTA_PDF__c</fullName>
        <label>CUENTA PDF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consideraciones_del_Servicio__c</fullName>
        <label>Consideraciones del Servicio</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PDF_Enviado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Se activa automáticamente cuando se envía el PDF por correo.</description>
        <label>PDF Enviado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Files__c</fullName>
        <label>Related Files</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendido__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendido</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Everything</filterScope>
        <label>All Quotes</label>
    </listViews>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <recordTypes>
        <fullName>Proyecto</fullName>
        <active>true</active>
        <description>Etapas de quote en opportunity - Proyectos</description>
        <label>Quote Proyecto</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quote_Standar</fullName>
        <active>true</active>
        <description>Etapas de quote en opportunity Standar</description>
        <label>Quote Standar</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validar_check_Accepted</fullName>
        <active>false</active>
        <description>Si el status es accepted, marcar casilla vendido, se necesita para que de la venta final en la opportunidad</description>
        <errorConditionFormula>AND(
ISPICKVAL(Status,&quot;Accepted&quot;),
Vendido__c = false,
IsSyncing = false

)</errorConditionFormula>
        <errorDisplayField>IsSyncing</errorDisplayField>
        <errorMessage>Quote001- Marcar la casilla Vendido y Sincronizar quote</errorMessage>
    </validationRules>
</CustomObject>